--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="item" id="gb">
             <h3>Gabriel "gB7" Buzelli</h3>
             <div class="content-wrapper">
-                <img src="https://cdn.discordapp.com/attachments/1320255951676248114/1320520801618886759/image.png?ex=6769e655&is=676894d5&hm=92e1b8bdd7fec2f6eeaefb30e98d4e51c638d942821ea05bb41d7ce26a3730e0&" alt="">
+                <img src="https://cdn.discordapp.com/attachments/1022449304717242400/1320523123560546324/WhatsApp_Image_2024-12-22_at_19.46.27_1.jpeg?ex=6769e87e&is=676896fe&hm=95e6a77c2b7b89152fb840d61cf340001df04f53cb19ff18d16f87ec9867b25d&" alt="">
                 <p>1st - Serie C Nov/24
                     <br>
                     1st - AVELAR CUP
@@ -68,7 +68,7 @@
         <h3>Danilo "ezeck" Narita
         </h3>
         <div class="content-wrapper">
-        <img src="https://cdn.discordapp.com/attachments/1320255951676248114/1320516013078483064/ezeckft.png?ex=6769e1df&is=6768905f&hm=7e3d60718bcd533810db7f4c44af91b9ad974b7834d00bd36cd36aede0ed4d9b&" alt="">
+        <img src="https://cdn.discordapp.com/attachments/1022449304717242400/1320523123174412330/WhatsApp_Image_2024-12-22_at_19.46.26.jpeg?ex=6769e87e&is=676896fe&hm=8e9aba59f94436bf8fe77862562f9262b2e2c2097c6f680acd81355773b591ce&" alt="">
         <p>1st - Serie C Nov/24
             <br>
             1st - ARENA CUP 
@@ -84,7 +84,7 @@
         <h3>davi "btka" bastyi
         </h3>
         <div class="content-wrapper">
-        <img src="https://cdn.discordapp.com/attachments/1320255951676248114/1320514212094672958/ftobtka.png?ex=6769e032&is=67688eb2&hm=7820a931682cccf27f97fcfbd8e64464d740985ff335d054161204694f952ca1&" alt="">
+        <img src="https://cdn.discordapp.com/attachments/1022449304717242400/1320523122876878940/WhatsApp_Image_2024-12-22_at_19.46.26_1.jpeg?ex=6769e87e&is=676896fe&hm=e208869341fc8f45e43ef4899d52a054391eacf59c82bfdf27b735772b99b1a3&" alt="">
         <p>1st - Serie C Nov/24
             <br>
             1st - Serie C Jun/24
@@ -101,8 +101,6 @@
             <br>
             7st - Serie A Relegation Dez/24</p>
         </div>
-                <a href="https://twitter.com/gB7" class="social-icon" target="_blank"><i class="fab fa-twitter"></i></a>
-
       </div>
       <div class="item" id="draco">
         <h3>Yuri "VOLK" Camargo</h3>
