--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <br>
             1st - SUPERXP JOINVILLE - LAN
             <br>
-            1st - FLORIPA MASTER - LAN</p>
+            1st - FLORIPA MASTER CHAMPIONS - LAN</p>
         </div>
 
       </div>
@@ -132,3 +132,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
